# Simu_flotte

./: .gitignore  README.md
Gestion_flotte/: README.md  STM32_ESSAI.code-workspace  platformio.ini  pre_include.h
Gestion_flotte/include/: stm32f4xx_it.h
Gestion_flotte/lib/FreeRTOS/include/: FreeRTOSConfig.h
Gestion_flotte/lib/FreeRTOS/portable/MemMang/: heap_1.c  heap_2.c  heap_3.c  heap_4.c  heap_5.c
Gestion_flotte/lib/FreeRTOS/source/: hook.c
Gestion_flotte/src/: commandes.cpp  drone.c  drone.h  flotte.c  flotte.h  main.c  stm32f4xx_it.c  uart_func.c  uart_func.h
IHM_flotte/: CMakeLists.txt  Makefile  README.md  main
IHM_flotte/include/: SerialManager.hpp  constants.hpp  drone.hpp  flotte.hpp
IHM_flotte/qml/: Header.qml  main.qml  map.qml  panneau_lateral.qml  qml.qrc
IHM_flotte/src/: SerialManager.cpp  drone.cpp  flotte.cpp  main.cpp  maintest.cpp
